Utworzono za pomocą Colaboratory

--- a/project.ipynb
+++ b/project.ipynb
@@ -2602,6 +2602,7 @@
         "\n",
         "1.   Using the os/glob/Path libraries to automate loading files.\n",
         "2.   Selection of hyperparameters for the Random Forest model.\n",
+        "3.   Building a model of neural networks.\n",
         "3.   Conversation with specialists and adding an additional parameter to verify the sensors.\n",
         "4.   Setting a new goal with business: maybe you don't have to deal with measurements in the laboratory and focus on verifying sensors already during production through the use of AI algorithms.\n",
         "\n",
@@ -2620,7 +2621,7 @@
       ],
       "toc_visible": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyM2h4Ys2hS+hWJaDuCgJFNS",
+      "authorship_tag": "ABX9TyPv0Y9ASJIrNP8DhGMTxjZn",
       "include_colab_link": true
     },
     "kernelspec": {
