--- a/project.ipynb
+++ b/project.ipynb
@@ -2603,8 +2603,9 @@
         "1.   Using the os/glob/Path libraries to automate loading files.\n",
         "2.   Selection of hyperparameters for the Random Forest model.\n",
         "3.   Building a model of neural networks.\n",
-        "3.   Conversation with specialists and adding an additional parameter to verify the sensors.\n",
-        "4.   Setting a new goal with business: maybe you don't have to deal with measurements in the laboratory and focus on verifying sensors already during production through the use of AI algorithms.\n",
+        "4.   Colecting more data.\n",
+        "5.   Conversation with specialists and adding an additional parameter to verify the sensors.\n",
+        "6.   Setting a new goal with business: maybe you don't have to deal with measurements in the laboratory and focus on verifying sensors already during production through the use of AI algorithms.\n",
         "\n",
         "\n",
         "\n"
@@ -2621,7 +2622,7 @@
       ],
       "toc_visible": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyPv0Y9ASJIrNP8DhGMTxjZn",
+      "authorship_tag": "ABX9TyNRveZ9OR/+hLoCy10SbANs",
       "include_colab_link": true
     },
     "kernelspec": {
